# herdr-web

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_herdr.xml  ic_launcher_herdr_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: ic_launcher_background.xml
bridge/: Cargo.toml
bridge/src/: main.rs  protocol.rs  server.rs  session.rs  web_bridge.rs
bridge/src/api/: mod.rs
docs/: android.md  release.md  vendoring.md
scripts/: check-vendor.sh  release.mjs  run-bridge.sh
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: AgentIcon.tsx  App.test.ts  App.tsx  BackendSettingsDialog.tsx  LaunchDialog.tsx  TerminalView.tsx  bridge.test.ts  bridge.tsx  commands.test.ts  commands.ts  displayPrefs.test.ts  displayPrefs.ts  main.tsx  mobileTerminalPrefs.test.ts  mobileTerminalPrefs.ts  overlays.tsx  state.test.ts  state.ts  styles.css  terminalConnectionStatus.test.ts  terminalConnectionStatus.ts  terminalPrefs.test.ts  terminalPrefs.ts  terminalReconnectPolicy.ts  terminalRenderer.ts  terminalTapFocus.test.ts  terminalTapFocus.ts  types.ts
